<resources>
    <string name="app_name">CardyApp</string>
    <string name="BASE_URL">http://cardy.in/schoolmanagement/api/</string>

    <string name="BASE_PROFILE_URL">http://cardy.in/schoolmanagement/uploads/</string>

    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="mobile_no_address_hint">Mobile Number</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_fb">Sign in with Facebook</string>
    <string name="btn_google">Sign in with Google</string>
    <string name="btn_linkedin">Sign in with Linkedin</string>
    <string name="sign_with_text">Sign in with</string>
    <string name="or_text">OR</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="new_user_text">New User?</string>
    <string name="Designation_text">Designation</string>
    <string name="company_name_text">Company Name</string>
    <string name="previous_organization_text">Previous organization</string>
    <string name="location_text">Location</string>
    <string name="sector_text">Sector</string>
    <string name="Accept_text">Accept</string>
    <string name="Reject_text">Reject</string>

    <string name="filter_text">Filter</string>
    <string name="gender_text">Gender</string>
    <string name="organization_text">Organization</string>
    <string name="age_text">Age</string>
    <string name="search_text">Search</string>

    <string name="facebook_login_failed">Facebook Log-in/Registration Failed</string>
    <string name="facebook_msg">Log-in/registration via your Facebook account failed. Please try a different method or log-in/register via your email address.</string>
    <string name="google_login_failed">Google Log-in/Registration Failed</string>
    <string name="google_msg">Log-in/registration via your Google account failed. Please try a different method or log-in/register via your email address.</string>
    <string name="retry">Retry</string>
    <string name="register">Register</string>

    <string name="title_activity_dasboard">Cardy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <string name="profile_text">Profile</string>
    <string name="home_text">Home</string>
    <string name="pending_request_text">Pending Request</string>
    <string name="scanner_text">QR Scanner</string>
    <string name="connections_text">Connections</string>
    <string name="faceRecognition_text">Face Recognition</string>

    <string name="facebook_app_id">533423587025682</string>
    <string name="fb_login_protocol_scheme">fb533423587025682</string>

    <string name="btn_reset">Reset</string>


    // Profile hint

    <string name="FName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="Gender">Gender</string>
    <string name="Date_of_birth">Date of Birth</string>
    <string name="Availability">Availability</string>
    <string name="Mobile_No">Mobile Number</string>
    <string name="Email">Email</string>
    <string name="Current_Company">Current Company</string>
    <string name="Designation">Designation</string>
    <string name="Official_Email_address">Official Email Address</string>
    <string name="Previous_Company">Previous Company</string>
    <string name="FB_profile_link">Facebook Profile Link</string>
    <string name="Google_profile_link">Google Profile Link</string>
    <string name="Linkedin_profile_link">Linkedin Profile Link</string>
    <string name="Qualification">Qualification</string>
    <string name="Biography">Biography</string>
    <string name="Basic">Basic</string>
    <string name="Advance">Advance</string>
    <string name="btn_submit">Submit</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>

    <string name="permission_required">Permission Required</string>
    <string name="ok">OK</string>

    <string name="LocationPermissionMessage">To search near by connection app needs your location permission.</string>

    <string name="Dashboard_label">Home</string>
    <string name="btn_accept_revert">Accept &amp; Revert</string>

    <string name="Network_error">Please check your internet connection and try again.</string>
    <string name="Dialog_title">Cardy</string>
    <string name="OK">OK</string>

    <string name="Camera_permission_dialog">"App needs your camera permission to set profile pic.</string>
    <string name="Contact_permission_dialog">"App needs access your contacts.</string>

    <string name="NO_pending_request">No Pending requests found.</string>
    <string name="NO_connection">No connections found.</string>
    <string name="NO_search">No search result found.</string>

    <string name="Connection_title">Connections</string>
    <string name="Search_title">Search</string>
    <string name="Pending_request_title">Pending request</string>
    <string name="Profile_title">Profile</string>
    <string name="QRScanner_title">QR scanner</string>
    <string name="Feedback_title">Feedback</string>
    <string name="Share_title">Share</string>
    <string name="Setting_title">Settings</string>
    <string name="btn_send">Send</string>
    <string name="No_connection_selected_error">No connections are selected to send request.</string>
    
    <string name="Cardy_pro_text">Cardy pro</string>
    <string name="Enter_verification_code">Enter Verification Code</string>

    <string name="ResendOTP_txt">Resend OPT</string>
    <string name="InvalidOTP">Please enter 4 digits OTP.</string>

    <string name="Visibility_On">Visibility on</string>
    <string name="Visibility_off">Visibility off</string>
</resources>
