<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="100dp"
    android:orientation="vertical">

    <com.cardyapp.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/filter_text"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintColor" />

    <com.cardyapp.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_password"
        android:padding="10dp"
        android:text="@string/gender_text"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintColor" />

    <com.cardyapp.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_password"
        android:padding="10dp"
        android:text="@string/organization_text"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintColor" />

    <com.cardyapp.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_password"
        android:padding="10dp"
        android:text="@string/Designation_text"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintColor" />

    <com.cardyapp.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_password"
        android:padding="10dp"
        android:text="@string/location_text"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintColor" />

    <com.cardyapp.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_password"
        android:padding="10dp"
        android:text="@string/previous_organization_text"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintColor" />

    <com.cardyapp.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_password"
        android:padding="10dp"
        android:text="@string/sector_text"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintColor" />

    <com.cardyapp.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/icon_password"
        android:padding="10dp"
        android:text="@string/age_text"
        android:textAllCaps="true" />
</LinearLayout>