<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <com.cardyapp.Views.CustomTextView
            android:id="@+id/btn_visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_red_bg"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:paddingTop="20dp"
            android:text="@string/Visibility_off"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.cardyapp.Views.CustomTextView
                android:id="@+id/tv_connections"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_home"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/connections_text" />

            <com.cardyapp.Views.CustomTextView
                android:id="@+id/tv_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_notification"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/search_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.cardyapp.Views.CustomTextView
                android:id="@+id/tv_qrScanner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_calender"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/scanner_text" />

            <com.cardyapp.Views.CustomTextView
                android:id="@+id/tv_pendingRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/icon_pending_request"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/pending_request_text" />
        </LinearLayout>

        <com.cardyapp.Views.CustomTextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@android:color/holo_blue_light"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/icon_profile"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/profile_text" />
    </LinearLayout>
</LinearLayout>